# kubernaut

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  Pipfile  README.md  datawireio-cloud-ff47e83d3663.json.enc  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  tox.ini  wheelhouse_build.sh
ci/: release.sh
examples/travis-ci/: java8.travis.yml  python3.travis.yml
kubernaut/: __init__.py  _version.py  backend.py  cli.py  kubeconfig.py  model.py  scout_client.py  util.py
kubernaut/claims/: cmd.py
kubernaut/clustergroups/: cmd.py
kubernaut/config/: cmd.py  model.py
kubernaut/create/: cmd.py
kubernaut/delete/: cmd.py
kubernaut/get/: cmd.py
kubernaut/resources/: names.json
legacy/: CHANGELOG.md  Makefile  README.md  wheelhouse_build.sh
legacy/ci/: release.sh
legacy/examples/travis-ci/: README.md  python2.travis.yml
legacy/kubernaut/: _version.py  cli.py
legacy/kubernaut/tests/: __init__.py
legacy/packaging/: confirm-release.sh  create-linux-packages.py  homebrew-formula.rb
packaging/: build-package.sh  create-linux-packages.py  homebrew-formula.rb  homebrew-package.sh  homebrew.rsa.pub  homebrew_rsa.enc  upload-linux-packages.py  upload_packages.sh
test/: test_util.py
tools/: build-local.sh
