[versioneer]
VCS = git
style = pep440
versionfile_source = kubernaut/_version.py
versionfile_build = kubernaut/_version.py
tag_prefix =
parentdir_prefix = kubernaut-

[flake8]
ignore =
       # E501: lines too long
       E501,
       # W391: blank lines at end of file
       W391

[metadata]
description-file = README.md